// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isr migration update-16.0.0 should replace ngx-isr/browser 1`] = `
"import { BrowserModule } from '@angular/platform-browser';
import { NgxIsrService } from 'ngx-isr/browser';
import { AppComponent } from './app.component';

@NgModule({
  declarations: [AppComponent],
  imports: [BrowserModule],
  providers: [NgxIsrService],
  bootstrap: [AppComponent],
})
export class AppModule {}
"
`;

exports[`isr migration update-16.0.0 should replace ngx-isr/models 1`] = `
"import { BrowserModule } from '@angular/platform-browser';
import { INgxIsrService, NgxIsrState } from 'ngx-isr/models';
import { AppComponent } from './app.component';

@NgModule({
  declarations: [AppComponent],
  imports: [BrowserModule],
  bootstrap: [AppComponent],
})
export class AppModule {}
"
`;

exports[`isr migration update-16.0.0 should replace ngx-isr/server 1`] = `
"import {
  IsrModule,
  provideISR,
  ISRHandler,
  FileSystemCacheHandler,
  FileSystemCacheOptions,
} from '@rx-angular/isr/server';

import { BrowserModule } from '@angular/platform-browser';
import { AppComponent } from './app.component';

@NgModule({
  declarations: [AppComponent],
  imports: [BrowserModule, IsrModule.forRoot()],
  bootstrap: [AppComponent],
})
export class AppModule {}
"
`;
